Mon May 24 01:02:58 1999  Mark Mitchell  <mark@codesourcery.com>

	* stmt.c (expand_end_bindings): Ignore any elements of VARS that
	are not VAR_DECLs.

Sun May 23 20:31:16 1999  Jeffrey A Law  (law@cygnus.com)

	* loop.c (strength_reduce): Grow reg_single_usage as needed.

Sun May 23 10:13:20 1999  David O'Brien <obrien@FreeBSD.org>

	* i386/freebsd-elf.h (LINK_SPEC): Change -static to -Bstatic.
	Also remove a useless comment.

Sun May 23 10:05:23 1999  Jerry Quinn <jquinn@nortelnetworks.com>

	* pa.md (negdf2,negsf2):  Use fneg instead of fsub on pa 2.0.

Sat May 22 01:27:49 1999  Mark Mitchell  <mark@codesourcery.com>

	* expr.h (lang_expand_constant): Guard with #ifdef TREE_CODE.

Thu May 20 10:00:42 1999   Stephen L Moshier  <moshier@world.std.com>

         * Makefile.in (GCC_FOR_TARGET): Add -I$(build_tooldir)/include.
			 
Thu May 20 09:58:57 1999  Jan Hubicka <hubicka@freesoft.cz>

	* function.c (assign_stack_local): Align stack slot propertly.
	(assign_outer_stack_local): Likewise.
 
Thu May 20 10:38:43 1999  Mark Mitchell  <mark@codesourcery.com>

	* expr.h (lang_expand_constant): Declare.
	* toplev.c (lang_expand_constant): Define it.
	* varasm.c (output_constant): Use it.

Thu May 20 08:15:00 1999  Bruce Korb <ddsinc09@ix.netcom.com>

	* fixinc/fixincl.c(main): we must not ignore SIGCLD now.

Thu May 20 07:06:39 1999  Alexandre Oliva  <aoliva@acm.org>

	* fixinc/Makefile.in(gnu-regex.o): add $(INCLUDES) to compile options
	* fixinc/fixincl.c(wait_for_pid): K&R-ify arguments
	(several places): omit static initialization
	(process): use single fd, since only the read fd is used
	* fixinc/gnu-regex.c: define 'const' away, if not supported
	* fixinc/procopen.c(several places): omit static initialization
	* fixinc/server.c: define 'volitile' away, if not supported

1999-05-20  Andreas Schwab  <schwab@issan.cs.uni-dortmund.de>

	* config/dbxcoff.h (DBX_OUTPUT_MAIN_SOURCE_FILE_END): Use
	asm_fprintf and %L to generate the label name.